// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prettier-pnp cli > should format 1`] = `
"/** --- FIXTURE --- */

const a = 5;

if (false) true;
"
`;

exports[`prettier-pnp cli > should install plugins with specific version 1`] = `
"/** --- FIXTURE --- */

const a = 5;

if (false) {
  true;
}
"
`;

exports[`prettier-pnp cli > should install plugins with specific version 2`] = `
"{
  \\"dependencies\\": {
    \\"prettier-plugin-curly-and-jsdoc\\": \\"^0.118.0\\",
    \\"prettier-plugin-organize-imports\\": \\"~3.0.2\\"
  }
}
"
`;

exports[`prettier-pnp cli > should not try to install already installed plugins (with fixed version) 2`] = `
"
----- Already installed ----

 - prettier-plugin-curly

----- Running prettier -----

/** --- FIXTURE --- */

const a = 5;

if (false) {
  true;
}
"
`;

exports[`prettier-pnp cli > should not try to install already installed plugins (with fixed version) 3`] = `
"
----- Already installed ----

 - prettier-plugin-curly

----- Running prettier -----

/** --- FIXTURE --- */

const a = 5;

if (false) {
  true;
}
"
`;

exports[`prettier-pnp cli > should not try to install already installed plugins (with fixed version) 4`] = `
"
----- Already installed ----

 - prettier-plugin-curly

----- Running prettier -----

/** --- FIXTURE --- */

const a = 5;

if (false) {
  true;
}
"
`;

exports[`prettier-pnp cli > should pass rest args to prettier 1`] = `
"/** --- FIXTURE --- */

const a = 5

if (false) {
  true
}
"
`;

exports[`prettier-pnp cli > should properly install plugins with peer deps 1`] = `
"/** --- FIXTURE --- */

const a = 5;

if (false) true;
"
`;

exports[`prettier-pnp cli > should work with --pn plugin 1`] = `
"/** --- FIXTURE --- */

const a = 5;

if (false) {
  true;
}
"
`;

exports[`prettier-pnp cli > should work with --pnp plugin 1`] = `
"/** --- FIXTURE --- */

const a = 5;

if (false) {
  true;
}
"
`;

exports[`prettier-pnp cli > w/ --quite > should be less verbose 1`] = `
"/** --- FIXTURE --- */

const a = 5

if (false) {
  true
}
"
`;
